--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HSLU WebTec Testat Website",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-cookies": "^1.6.0",
     "angular-route": "^1.5.8",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^4.0.0-alpha.5"
